src/objects/Sales_Support_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Employee_Text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Sales Employee (Text)</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Support_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporting_Employee_Active__c</fullName>
        <formula>Supporting_Employee__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supporting Employee Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supporting_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>BDR, Field Marketing Manager, etc. who is responsible for following up on leads in support of the sales employee.</inlineHelpText>
        <label>Supporting Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Support_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Support Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Employee__c</columns>
        <columns>Supporting_Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LU-{0000000}</displayFormat>
        <label>AE Support Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Support Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>